--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     compile 'nz.bradcampbell:paperparcel-kotlin:2.0.0-beta2'
     kapt 'nz.bradcampbell:paperparcel-compiler:2.0.0-beta2'
 
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'io.reactivex:rxjava:1.1.6'
 }
 
 repositories {
