--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,26 +30,27 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    testCompile 'junit:junit:4.12'
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
+
+
+
+
+
+    compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.google.firebase:firebase-core:10.0.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.android.gms:play-services-auth:10.0.1'
-
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
-
     compile 'nz.bradcampbell:paperparcel:2.0.0-beta2'
     compile 'nz.bradcampbell:paperparcel-kotlin:2.0.0-beta2'
-    kapt 'nz.bradcampbell:paperparcel-compiler:2.0.0-beta2'
-
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.6'
-    
     compile 'com.facebook.fresco:fresco:1.0.0'
-
+    compile 'com.android.support:design:25.1.0'
+    testCompile 'junit:junit:4.12'
+    kapt 'nz.bradcampbell:paperparcel-compiler:2.0.0-beta2'
 }
 
 repositories {
