--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 /captures
 .externalNativeBuild
 
+
 # User-specific stuff:
 .idea/workspace.xml
 .idea/tasks.xml
@@ -47,3 +48,4 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+google-services.json
